Bug 1933011 - Fix -Werror=unreachable in libmar. r=sylvestre

With:
--enable-warnings-as-errors
--disable-unified-build

```
 4:53.74 /git/gecko1/modules/libmar/verify/mar_verify.c:143:5: error: code will never be executed [-Werror,-Wunreachable-code]
 4:53.74   143 |     fprintf(stderr, "ERROR: Could not init crytpo library.\n");
 4:53.74       |     ^~~~~~~
 4:53.74 1 error generated.
```

So convert the macro to function, which makes the compiler happy.

Differential Revision: https://phabricator.services.mozilla.com/D230016